; ModuleID = '/home/carl/AnghaBench/reactos/win32ss/drivers/font/ftfd/extr_font.c_HackFixup.c'
source_filename = "/home/carl/AnghaBench/reactos/win32ss/drivers/font/ftfd/extr_font.c_HackFixup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64* @HackFixup(i64* %0, i32 %1) #0 {
  %3 = alloca i64*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64*, align 8
  store i64* %0, i64** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = call i64* @EngAllocMem(i32 0, i32 %6, i8 signext 32)
  store i64* %7, i64** %5, align 8
  %8 = load i64*, i64** %5, align 8
  %9 = load i64*, i64** %3, align 8
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @memcpy(i64* %8, i64* %9, i32 %10)
  %12 = load i64*, i64** %5, align 8
  store i64 0, i64* %12, align 8
  %13 = load i64*, i64** %5, align 8
  ret i64* %13
}

declare dso_local i64* @EngAllocMem(i32, i32, i8 signext) #1

declare dso_local i32 @memcpy(i64*, i64*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
